@@ -1,4 +1,7 @@
-%Error: t/t_dpi_name_bad.v:12:32: DPI function has illegal characters in C identifier name: 'badly.named'
-   12 |    import "DPI-C" function int \badly.named (int i);
+%Error: t/t_dpi_name_bad.v:11:32: DPI function has illegal characters in C identifier name: badly.named
+   11 |    import "DPI-C" function int \badly.named (int i);
       |                                ^~~~~~~~~~~~
+%Error: t/t_dpi_name_bad.v:14:17: DPI function has illegal characters in C identifier name: badly.expt
+   14 |    function int \badly.expt ; return 0; endfunction
+      |                 ^~~~~~~~~~~
 %Error: Exiting due to
